--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Add a new div for the success message -->
     <div id="success-message" style="display: none; text-align: center; font-size: 18px; margin-top: 20px;">
-       Thank you for your kind response. We will keep in touch. For further details, please contact us at <a style="color: red;" href="https://wa.me/919746193211" target="_blank">+91 97461 93211</a>.
+       Thank you for your kind response. We will keep in touch. For further details: 97461 93211.
 
     </div>
 
