--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <div class="brand-title">PBGTI</div>
             <div class="inputs">
                 <label>NAME</label>
-                <input type="text" name="Name" style="text-transform: capitalize;" placeholder="NAME" />
+                <input type="text" name="Name" style="text-transform: capitalize;" placeholder="NAME"  required="" />
 
                 <!-- Add the selection button here -->
                 <label>Select Your Course</label>
-                <select name="TrainingOptions">
+                <select name="TrainingOptions"  required="" >
                     <option value="none">Select Your Course</option>
                     <option value="HRM">HR Management Course</option>
                     <option value="LegalTranslation"> Legal Translation Course</option>
@@ -28,7 +28,7 @@
                 </select>
 
                 <label>Number</label>
-                <input type="number" name="Watsapp Number" placeholder="Watsapp Number" />
+                <input type="number" name="Watsapp Number" placeholder="Watsapp Number"  required="" />
                 <button type="submit" id="submit-btn">Submit</button>
                 <div id="loading" style="display: none;">Loading...</div>
                 <a style="background-color: #ecf0f3; color: black;" href="https://www.pbgti.com/">Click here for more
